--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_maps_flutter: ^2.9.0
   google_maps_flutter_platform_interface: ^2.9.0
   geolocator: ^13.0.1
+  google_maps_flutter_android: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
