--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_maps_flutter_platform_interface: ^2.9.0
   geolocator: ^13.0.1
   google_maps_flutter_android: any
+  flutter_local_notifications: ^17.2.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
