--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   geolocator: ^13.0.1
   google_maps_flutter_android: any
   flutter_local_notifications: ^17.2.3
+  http: ^1.2.2
+  shared_preferences: ^2.3.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
