--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,9 @@ dependencies:
   google_maps_flutter_android: any
   flutter_local_notifications: ^17.2.3
   http: ^1.2.2
+  permission_handler: ^10.2.0
   shared_preferences: ^2.3.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
