--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_maps_flutter_android: any
   flutter_local_notifications: ^17.2.3
   http: ^1.2.2
+  intl: ^0.19.0
   permission_handler: ^10.2.0
   shared_preferences: ^2.3.2
 
