--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.19.0
   permission_handler: ^10.2.0
   shared_preferences: ^2.3.2
+  nfc_manager: ^3.5.0
 
 dev_dependencies:
   flutter_test:
