--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   intl: ^0.19.0
   permission_handler: ^10.2.0
   shared_preferences: ^2.3.2
+  u_credit_card: ^1.3.1
+  pin_code_fields: ^8.0.1
+  animated_icon: ^0.0.9
+  peerdart: ^0.5.6
 
 dev_dependencies:
   flutter_test:
@@ -70,6 +74,8 @@ flutter:
     - assets/home.jpeg
     - assets/logo.png
     - assets/lima_pass.jpg
+    - assets/visa.png
+    - assets/yape.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
