--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   pin_code_fields: ^8.0.1
   animated_icon: ^0.0.9
   peerdart: ^0.5.6
+  basic_utils: ^5.7.0
 
 dev_dependencies:
   flutter_test:
