--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   animated_icon: ^0.0.9
   peerdart: ^0.5.6
   basic_utils: ^5.7.0
+  flutter_polyline_points: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -78,6 +79,8 @@ flutter:
     - assets/lima_pass.jpg
     - assets/visa.png
     - assets/yape.png
+    - assets/map_styles/dark_map.json
+    - assets/map_styles/light_map.json
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
