--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   peerdart: ^0.5.6
   basic_utils: ^5.7.0
   flutter_polyline_points: ^2.1.0
+  image_picker: ^1.1.2
+  multi_image_picker_view: 1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +79,7 @@ flutter:
     - assets/home.jpeg
     - assets/logo.png
     - assets/lima_pass.jpg
+    - assets/lima_pass_rojo.jpg
     - assets/visa.png
     - assets/yape.png
     - assets/map_styles/dark_map.json
