--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,10 +13,25 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      # The analysis requires to retrieve dependencies and build successfully
-      #- name: Build
-      #  run: <mark><commands_to_build_your_project></mark>
+      - uses: actions/setup-java@v1
+        with:
+            java-version: '17.x'
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: stable
+          flutter-version: 3.24.0
+      - run: flutter pub get
+
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v5
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      - run: flutter test
+
+      - run: flutter build apk --dart-define=GOOGLE_API_KEY= ${{ secrets.GOOGLE_API_KEY }}
+
+      - uses: actions/upload-artifact@v1
+        with:
+            name: release-apk
+            path: build/app/outputs/apk/release/app-release.apk
