--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
 
       - run: flutter pub get
 
-      - run: flutter build apk --dart-define=GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }}
+      - run: flutter build apk --dart-define=GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }} --dart-define=API_BASE_URL=${{ secrets.API_BASE_URL }}
 
       - name: Upload APK as artifact
         uses: actions/upload-artifact@v4
