--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,6 @@ on:
   push:
     branches:
       - master
-  pull_request:
-    types: [closed]
 
 jobs:
   build:
@@ -26,7 +24,7 @@ jobs:
 
       - run: flutter pub get
 
-      - run: flutter build apk --dart-define=GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }}
+      - run: flutter build apk --dart-define=GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }} --dart-define=API_BASE_URL=${{ secrets.API_BASE_URL }}
 
       - name: Upload APK as artifact
         uses: actions/upload-artifact@v4
@@ -37,7 +35,7 @@ jobs:
   release:
     name: Create GitHub Release
     runs-on: ubuntu-latest
-    needs: build  # Este job depende del job 'build'
+    needs: build
     steps:
       - name: Download APK artifact
         uses: actions/download-artifact@v2
