--- a/.github/workflows/functional.yml
+++ b/.github/workflows/functional.yml
@@ -22,12 +22,12 @@ jobs:
       - name: Start services
         run: |
           echo "Starting PostgreSQL..."
-          docker-compose -f docker-compose.test.yml up -d postgres
+          docker compose -f docker-compose.test.yml up -d postgres
           
           sleep 5         
           
           echo "Waiting for PostgreSQL to be healthy..."
-          docker-compose -f docker-compose.test.yml up -d backend
+          docker compose -f docker-compose.test.yml up -d backend
           
           sleep 5
 
