--- a/.github/workflows/functional.yml
+++ b/.github/workflows/functional.yml
@@ -10,8 +10,6 @@ on:
 
   workflow_dispatch:
 
-
-
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -24,20 +22,12 @@ jobs:
           echo "Starting PostgreSQL..."
           docker compose -f docker-compose.test.yml up -d postgres
           
-          sleep 5         
+          sleep 15         
           
           echo "Waiting for PostgreSQL to be healthy..."
           docker compose -f docker-compose.test.yml up -d backend
           
           sleep 15
-
-      - name: Verify services are running
-        run: |
-          echo "Service status:"
-          docker compose -f docker-compose.test.yml ps
-          
-          echo "Testing PostgreSQL connection:"
-          docker compose -f docker-compose.test.yml exec -T postgres pg_isready -U postgres
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
@@ -47,6 +37,16 @@ jobs:
 
       - name: Install dependencies
         run: flutter pub get
+
+      - name: Verify services are running
+        run: |
+          echo "Service status:"
+          docker compose -f docker-compose.test.yml ps
+          
+          echo "Testing PostgreSQL connection:"
+          docker compose -f docker-compose.test.yml exec -T postgres pg_isready -U postgres
+          docker compose -f docker-compose.test.yml logs backend
+          curl -f http://localhost:8080/elimapass/v1/actuator/health || echo "Backend health check failed"
 
       - name: Run Dart functional tests
         run: flutter test test/functional_test  --dart-define=BACKEND_URL=http://localhost:8080/
