--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,6 +3,12 @@ on:
   push:
     branches:
       - master
+  workflow_dispatch:
+    inputs:
+      api_base_url:
+        description: 'API Base URL'
+        required: false
+        type: string
 
 jobs:
   cont-integration:
@@ -13,6 +19,8 @@ jobs:
     name: Build APK
     runs-on: ubuntu-latest
     needs: cont-integration
+    env:
+      API_URL: ${{ github.event.inputs.api_base_url || secrets.API_BASE_URL }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -29,12 +37,16 @@ jobs:
 
       - run: flutter pub get
 
-      - run: flutter build apk --dart-define=GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }} --dart-define=API_BASE_URL=${{ secrets.API_BASE_URL }}
+      - name: Build APK
+        run: |
+          flutter build apk \
+            --dart-define=GOOGLE_API_KEY=${{ secrets.GOOGLE_API_KEY }} \
+            --dart-define=API_BASE_URL=${{ env.API_URL }}
 
       - name: Upload APK as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: release-apk
+          name: release-apk-${{ github.run_number }}
           path: build/app/outputs/apk/release/app-release.apk
 
   release:
@@ -42,18 +54,31 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      contents: write  # Add this line to grant write permissions to the contents
+      contents: write
     steps:
       - name: Download APK artifact
         uses: actions/download-artifact@v4
         with:
-          name: release-apk
-  
+          name: release-apk-${{ github.run_number }}
+
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: v${{ github.run_number }}
           name: Release v${{ github.run_number }}
-          files: app-release.apk 
+          body: |
+            🚀 **Release v${{ github.run_number }}**
+            
+            **Trigger:** ${{ github.event_name == 'push' && '🤖 Automatic (Push)' || '👤 Manual' }}
+            **Built by:** @${{ github.actor }}
+            **Build Date:** 2025-01-16 17:11:55 UTC
+            
+            **Build Information:**
+            - Branch: `${{ github.ref_name }}`
+            - Commit: [`${{ github.sha }}`](https://github.com/${{ github.repository }}/commit/${{ github.sha }})
+            
+            **Downloads:**
+            - [📱 Android APK](./app-release.apk)
+          files: app-release.apk
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
