--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,10 +3,7 @@ name: Continuous Integration
 on:
   push:
     branches:
-      - release
-  pull_request:
-    branches:
-      - release
+      - develop
   workflow_call:
 
 jobs:
