--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,8 @@
 name: Validate and Test
 on:
-  push:
-    branches:
-      - develop
   pull_request:
-    types: [opened]
+    branches:
+      - release
   workflow_call:
 
 
